--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "3.2.18",
-    "com.unity.2d.pixel-perfect": "2.1.0",
-    "com.unity.2d.psdimporter": "2.1.11",
+    "com.unity.2d.animation": "10.1.3",
+    "com.unity.2d.pixel-perfect": "5.0.3",
+    "com.unity.2d.psdimporter": "9.0.3",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.2d.spriteshape": "3.0.18",
+    "com.unity.2d.spriteshape": "10.0.6",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.ai.navigation": "2.0.4",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.textmeshpro": "2.1.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
